--- a/salary-api/src/main/resources/application.yml
+++ b/salary-api/src/main/resources/application.yml
@@ -1,35 +1,29 @@
 server:
   port: 8080
-  servlet:
-    context-path: /
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/your_database?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: your_username
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: jdbc:sqlserver://localhost:1433;databaseName=salary_db;encrypt=false
+    username: sa
     password: your_password
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      initial-size: 5
-      min-idle: 5
-      max-active: 20
-      max-wait: 60000
-      time-between-eviction-runs-millis: 60000
-      min-evictable-idle-time-millis: 300000
-      validation-query: SELECT 1
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
-      filters: stat,wall
-      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    
+  redis:
+    host: localhost
+    port: 6379
+    
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
-mybatis:
+mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.xuhao.payroll.entity
+  type-aliases-package: com.xuhao.salary.infrastructure.persistence.po
   configuration:
     map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  type-handlers-package: com.xuhao.payroll.common.handler
+
+jwt:
+  secret: your_jwt_secret_key
+  expiration: 86400000 # 24小时
