--- a/salary-ui/package.json
+++ b/salary-ui/package.json
@@ -8,16 +8,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
-    "pinia": "^2.1.0",
-    "element-plus": "^2.4.0",
-    "axios": "^1.6.0"
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.0",
+    "element-plus": "^2.9.1",
+    "pinia": "^2.3.0",
+    "vue": "^3.x.x",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.4",
+    "@types/node": "^20.10.5",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^4.5.0",
-    "typescript": "^5.2.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0"
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/runtime-core": "^3.3.13",
+    "@vue/tsconfig": "^0.5.1",
+    "typescript": "^5.0.2",
+    "unplugin-vue-router": "^0.7.0",
+    "vite": "^4.4.5",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vue-tsc": "^1.8.5"
   }
 }
