--- a/salary-ui/package.json
+++ b/salary-ui/package.json
@@ -13,12 +13,12 @@
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "vue": "^3.x.x",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "esbuild": "^0.24.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "^20.10.5",
-    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-core": "^3.3.13",
