--- a/salary-ui/tsconfig.json
+++ b/salary-ui/tsconfig.json
@@ -13,7 +13,7 @@
     "lib": ["esnext", "dom"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "types": ["element-plus/global", "node"],
     "skipLibCheck": true
