--- a/salary-api/src/main/resources/application.yml
+++ b/salary-api/src/main/resources/application.yml
@@ -9,37 +9,54 @@ spring:
     username: sa
     password: 245689731
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+  
   jpa:
-    show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.SQLServer2012Dialect
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.SQLServerDialect
-        format_sql: true
-    packages-to-scan: com.xuhao.salary.domain.model
+        '[format_sql]': true
+    entity-scan:
+      base-packages: com.sms.domain.entity
+  
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
+      timeout: 10000
+      lettuce:
+        pool:
+          max-active: 8
+          max-wait: -1
+          max-idle: 8
+          min-idle: 0
 
-  redis:
-    host: localhost
-    port: 6379
-    
 springdoc:
   api-docs:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
 
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.xuhao.salary.domain.model
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
+  type-aliases-package: com.sms.domain.entity
+  configuration:
+    map-underscore-to-camel-case: true
 
-jwt:
-  secret: your_jwt_secret_key_here
-  expiration: 86400
+security:
+  jwt:
+    secret-key: your-secret-key
+    token-validity: 86400000
+    refresh-token-validity: 604800000
 
-# 跨域配置
-cors:
-  allowed-origins: http://localhost:5173
-  allowed-methods: GET,POST,PUT,DELETE,OPTIONS
-  allowed-headers: Content-Type,Authorization
-  allow-credentials: true
+application:
+  cors:
+    allowed-origins: http://localhost:3000
+    allowed-methods: GET,POST,PUT,DELETE,OPTIONS
+    allowed-headers: Authorization,Content-Type
+    exposed-headers: Authorization
+    allow-credentials: true
+    max-age: 3600
