--- a/salary-api/src/main/resources/application.yml
+++ b/salary-api/src/main/resources/application.yml
@@ -6,33 +6,37 @@ server:
 spring:
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://localhost:1433;databaseName=salary_db;encrypt=false;trustServerCertificate=true;integratedSecurity=false
+    url: jdbc:sqlserver://localhost;databaseName=master;trustServerCertificate=true;encrypt=false
     username: sa
     password: 245689731
     hikari:
       minimum-idle: 5
       maximum-pool-size: 10
       idle-timeout: 300000
-      connection-timeout: 20000
+      connection-timeout: 60000
       connection-test-query: SELECT 1
       max-lifetime: 1200000
       register-mbeans: true
+      connection-init-sql: USE PayrollDB
   profiles:
     active: dev
   
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate # 改为validate模式，因为表已经存在
     show-sql: true
-    database-platform: org.hibernate.dialect.SQLServer2012Dialect
+    database-platform: org.hibernate.dialect.SQLServerDialect
     properties:
       hibernate:
-        '[format_sql]': true
-        '[globally_quoted_identifiers]': true
-        dialect: org.hibernate.dialect.SQLServer2012Dialect
+        format_sql: true
+        globally_quoted_identifiers: true
+        globally_quoted_identifiers_skip_column_definitions: true
+        dialect: org.hibernate.dialect.SQLServerDialect
         jdbc:
           lob:
             non_contextual_creation: true
+        physical_naming_strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        implicit_naming_strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
   
   data:
     redis:
