--- a/salary-api/src/main/resources/application.yml
+++ b/salary-api/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://localhost;databaseName=master;trustServerCertificate=true;encrypt=false
+    url: jdbc:sqlserver://localhost:1433;databaseName=PayrollDB;encrypt=false;trustServerCertificate=true
     username: sa
     password: 245689731
     hikari:
@@ -23,14 +23,12 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: validate # 改为validate模式，因为表已经存在
+      ddl-auto: none  # 改为 none，防止自动修改表结构
     show-sql: true
     database-platform: org.hibernate.dialect.SQLServerDialect
     properties:
       hibernate:
         format_sql: true
-        globally_quoted_identifiers: true
-        globally_quoted_identifiers_skip_column_definitions: true
         dialect: org.hibernate.dialect.SQLServerDialect
         jdbc:
           lob:
